--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,7 @@
   <p>Hi there, My name is ravinder singh</p>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-
-    socket.on('connect', ()=>{
-      console.log("Connected to server");
-    });
-
-    socket.on('disconnect', () => {
-      console.log('Disconnected from server');
-    });
-  </script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
